<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_server"
        android:title="@string/menu_change_server"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_data"
        android:title="@string/menu_clear_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_browser"
        android:title="@string/menu_open_browser"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>
